package.yml: use apt instead of apt-get

--- a/snippets/package.yml
+++ b/snippets/package.yml
@@ -56,7 +56,7 @@ brew:cleanup:
 # linux apt
 apt:update:
   do: exec
-  command: sudo apt-get -y update && sudo apt -y full-upgrade && sudo apt-get -y autoremove
+  command: sudo apt -y update && sudo apt -y full-upgrade && sudo apt -y autoremove
 apt:ls:
   do: exec
   desc: list installed apt packages
