--- a/snippets/polarbear.yml
+++ b/snippets/polarbear.yml
@@ -33,9 +33,13 @@ coadd:rm:hdf5:
   do: exec
   desc: delete corrupted hdf5 files under coadd
   command: find . -path '*/coadd/*' -name '*.hdf5' -exec h5delete.py -p 64 {} +
+git:pull:ab:
+  do: exec
+  desc: pull branch cleanup jcdelensing neil_unblinding yuyang khcheung from both bolo and github.
+  command: for branch in cleanup jcdelensing neil_unblinding yuyang khcheung; do git checkout $branch && git pull origin $branch && git push github $branch; done
 git:push:ab:
   do: exec
-  desc: push branch cleanup and khcheung to both bolo and github.
+  desc: push branch cleanup jcdelensing neil_unblinding yuyang khcheung to both bolo and github.
   command: for branch in cleanup jcdelensing neil_unblinding yuyang khcheung; do git checkout $branch && git push origin $branch && git push github $branch; done
 git:push:pa:
   do: exec
