--- a/snippets/bash.yml
+++ b/snippets/bash.yml
@@ -231,3 +231,13 @@ info:smart:
 info:hdparm:
   do: exec
   command: sudo hdparm -I /dev/<<disk>>
+
+# PATH
+path:print:
+  do: exec
+  desc: pretty-print PATH
+  command: echo $PATH | tr ':' '\n'
+path:stat:
+  do: exec
+  desc: print stat of PATH, useful for inspecting duplicated paths
+  command: echo $PATH | tr ':' '\n' | sort | uniq -c | sort -n
