--- a/snippets/bash.yml
+++ b/snippets/bash.yml
@@ -106,6 +106,11 @@ fd:tar:xz:txt:
   do: exec
   desc: find text files with a predefined name pattern and compress them as .txt.tar.xz with level e9
   command: find \! -path '*/.git/*' -type f -regextype posix-egrep -regex ".*/.*(-stdout_[[:digit:]]*|-stderr_[[:digit:]]*|makefile|.txt|.err|.csv|.out|.time|.in)" | XZ_OPT=-e9 tar -cJf $(basename $(pwd)).txt.tar.xz -T -
+fd:make:clean:
+  do: exec
+  desc: find all makefiles in any sub-directories and run 'make clean'
+  #  && make clean && cd -
+  command: find -type f \( -name GNUmakefile -o -name makefile -o -name Makefile \) -exec bash -c 'for makefile do cd ${makefile%/*}; make clean; cd -; done' bash {} +
 
 # grep #########################################################################
 gp:
