git.yml: add git:submodule:reset; rename git:pushmerge to git:push:merge
git:push:merge also added default values

--- a/snippets/git.yml
+++ b/snippets/git.yml
@@ -17,6 +17,10 @@ git:submodule:update:
   do: exec
   desc: update submodules recursively
   command: git submodule update --recursive --remote
+git:submodule:reset:
+  do: exec
+  desc: reset the submodule status, useful when it is dirty
+  command: git submodule foreach --recursive git checkout .
 # overriding / deleting
 git:reset:remote:
   do: exec
@@ -50,10 +54,10 @@ git:pull:
   do: exec
   desc: pull all repositories under current directory
   command: find -maxdepth 1 -mindepth 1 -exec bash -c 'cd $0; git pull' {} \;
-git:pushmerge:
+git:push:merge:
   do: exec
   desc: perform a common pattern---git push then checkout then merge then push
-  command: git checkout <<from>> && git push && git checkout <<to>> && git merge --no-edit <<from>> && git push
+  command: git checkout <<from(master)>> && git push && git checkout <<to(gh-pages)>> && git merge --no-edit <<from>> && git push
 git:undo:
   do: exec
   desc: undo last commit while keeping change
