--- a/snippets/git.yml
+++ b/snippets/git.yml
@@ -50,10 +50,10 @@ git:cp:
   do: exec
   desc: git cherry-pick a range
   command: git cherry-pick <<from>>^..<<to>>
-git:pull:
+git:batch:
   do: exec
-  desc: pull all repositories under current directory
-  command: find -maxdepth 1 -mindepth 1 -exec bash -c 'cd $0; git pull' {} \;
+  desc: batch pull/psuh at all repositories at a certain level
+  command: level=$((<<level>> - 1)); find -maxdepth $level -mindepth $level -type d -name '.git' -print0 | xargs -0 -i -n1 -P0 bash -c 'cd $0/.. && git <<action(pull,push)>>' {}
 git:push:merge:
   do: exec
   desc: perform a common pattern---git push then checkout then merge then push
