--- a/snippets/git.yml
+++ b/snippets/git.yml
@@ -54,6 +54,10 @@ git:batch:
   do: exec
   desc: batch pull/psuh at all repositories at a certain level
   command: level=$((<<level>> + 1)); find -maxdepth $level -mindepth $level -type d -name '.git' -print0 | xargs -0 -i -n1 -P0 bash -c 'cd $0/.. && git <<action(pull,push)>>' {}
+git:reset:batch:
+  do: exec
+  desc: batch reset at all repositories at a certain level
+  command: level=$((<<level>> + 1)); find -maxdepth $level -mindepth $level -type d -name '.git' -print0 | xargs -0 -i -n1 -P0 bash -c 'cd $0/.. && git reset --hard && git clean -d -f' {}
 git:push:merge:
   do: exec
   desc: perform a common pattern---git push then checkout then merge then push
