--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: go
 
 go:
-  - "1.2.x"
   - "1.3.x"
   - "1.4.x"
   - "1.5.x"
@@ -15,6 +14,6 @@ go:
   - master
 
 install:
-      - go get -t ./...
+  - make all -j3
 script:
   - make -j3
