Revert ".travis.yml: remove go 1.2.x; use makefile to build"
This reverts commit 26e75344235645fa80de1a7f4cd3dac669106ca1.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: go
 
 go:
+  - "1.2.x"
   - "1.3.x"
   - "1.4.x"
   - "1.5.x"
@@ -14,6 +15,6 @@ go:
   - master
 
 install:
-  - make all -j3
+      - go get -t ./...
 script:
   - make -j3
