--- a/snippets/polarbear.yml
+++ b/snippets/polarbear.yml
@@ -91,3 +91,12 @@ install:makefile:
   do: exec
   desc: make symlink of makefiles from abx to current directory
   command: for i in common.in makefile null.in full.in nreal_mapsplits.in; do ln -s $HOME/git/cmb-polarbear_private/AnalysisBackend-Extras-ickc/makefile/$i .; done
+
+bolo2gh:
+  do: exec
+  desc: (routine) mirror bolowiki to github on bolowiki
+  command: ssh -t khcheung@bolowiki.berkeley.edu 'cd /home/khcheung/git/bolo2github && git pull && make mirror-github'
+bb2gh:
+  do: exec
+  desc: (routine) mirror bitbucket to github on lpc
+  command: cd ~/git/source/bolo2github && git pull && make clean && make mirror-bitbucket && make clean
